--- a/Bewery_Review_System/brewery-review-backend/.env
+++ b/Bewery_Review_System/brewery-review-backend/.env
@@ -1,5 +1,6 @@
 MONGO_URI=mongodb+srv://preran:Preran%4024gr@cluster0.ud7q6ld.mongodb.net/brewery
 # MONGODB_URI=mongodb+srv://preran:Preran@24gr@cluster0.ud7q6ld.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=K7JfK3TbJp9zS2qA8eRwP5hZu2eE3wH6gN4tG7zX5wR1sB9gH2
-
+ACCESS_TOKEN_SECRET=WcPGXClpKD7Bc1C0CCDA1060E2GGlTfamrd8-W0ghBE
+REFRESH_TOKEN_SECRET=WcPGXClpKD7Bc1C0CCDA1060E2GGlTfamrd8-W0ghBE
 PORT=5000
